--- a/heatmap-electron-fe/src/heatmap.html
+++ b/heatmap-electron-fe/src/heatmap.html
@@ -22,6 +22,10 @@
         <canvas id="heatmap-canvas" width="800px" height="600px"></canvas>
         <img id="room-layout" src="../assets/png/work5.png" style="width:800px; height:600px;">
     </div>
+    <div class="metrics">
+        <p>Temperature (C): </p>
+        <p id="temp"></p>
+    </div>
     <script src="heatmap.js"></script>
 </body>
 
